# scarp-app

./: .gitattributes  .gitignore  ADDITION_confidence_layer.md  ADDITION_refinement_and_symbols.md  AGENTS-GLACIER.md  AGENTS.md  AGENTS_A_pipeline.md  AGENTS_B_frontend.md  AGENTS_C_backend.md  AGENTS_phase-0-fixup.md  AGENTS_phase-0.md  AGENTS_phase-1.md  AGENTS_phase-2.md  AGENTS_phase-3.md  AGENTS_phase-4.md  AGENTS_phase-4b.md  AGENTS_phase-5.md  INFRA_PLAN.md  LICENSE  PHASE_PLANS.md  README.md  REUSE_INVENTORY.md  ROADMAP.md  SECURITY.md  dev.ps1  handmatig_ijsfront_intekenen.md  staticwebapp.config.json
.github/workflows/: azure-deploy.yml
backend/: .env.example  pyproject.toml
backend/src/scarp/: __init__.py  config.py  geo.py
backend/src/scarp/api/: layers.py  main.py  ratelimit.py  schemas.py  search.py  zones.py
backend/tests/: test_api.py
data/processed/: candidates_influence.geojson  confidence.geojson  glacier_episodes.geojson  glacier_timeseries.json  meta.json  (+7 more)
docs/: DEPLOY.md  KEY_INSIGHTS.md  NARRATIVE_data_lag.md  PROJECT_RATIONALE.md  README_plan.md  ZOOM_PREP_higman.md  ZOOM_PREP_higman_simple.md  pitch.md  submission-procedure.md  video-plan.md
frontend/: .env.development  .env.production  package.json  pnpm-lock.yaml  tailwind.config.ts
glacier/: 00_explore.py  10_extract.py  15_explore.py  17_icefront_check.py  20_visualize.py  30_enrich_zones.py  40_rerank_zones.py  _trend.py  config.py  pyproject.toml
glacier/data/processed/: exploration_results.json  glacier_exploration.json  velocity_summary.geojson  zone_glacier_params.json  zones_glacier_enriched.geojson
prep/: 00_download.py  05_hig_inventory.py  10_normalize.py  20_slope.py  25_relief.py  30_exposure.py  40_monitoring_mask.py  45_confidence.py  50_score_zones.py  55_hig_proximity.py  README.md  pyproject.toml
(+19 files in other folders)
