[project]
name = "scarp"
version = "0.1.0"
description = "Backend API for Scarp"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.136",
  "uvicorn[standard]>=0.34",
  "shapely>=2.1",
  "httpx>=0.27",
  "openai>=1.50",
  "pydantic>=2.11",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scarp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
