[project]
name = "scarp-glacier"
version = "0.1.0"
description = "ITS_LIVE glacier velocity ingestion for Scarp hazard assessment"
requires-python = ">=3.12"
dependencies = [
    "itslive>=0.4",
    "xarray>=2024.1",
    "zarr>=2.16",
    "s3fs>=2024.1",
    "geopandas>=1.0",
    "rasterio>=1.3",
    "numpy>=1.26",
    "pyproj>=3.6",
    "shapely>=2.0",
    "matplotlib>=3.8",
    "httpx>=0.27",
    "pandas>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
